frontend/test/should_fail/dpo_001.grg
rule r {
	pattern {
	    x:Node;
        dpo();
	}
	replace {
	}
}

